--- a/06_列表渲染/test.html
+++ b/06_列表渲染/test.html
@@ -17,14 +17,52 @@
 
 <div id="demo">
   <h2>测试: v-for 遍历数组</h2>
+  <ul>
+    <li v-for="(person, index) in persons" :key="index">
+      {{index}}---{{person.name}}---{{person.age}}
+      --<button @click="deleteP(index)">删除</button>
+      --<button @click="updateP(index, {name: 'cat', age: 19})">更新</button>
+    </li>
+  </ul>
 
   <h2>测试: v-for 遍历对象</h2>
+  <ul>
+    <li v-for="(value, key) in persons[1]" :key="key">
+      {{key}}={{value}}
+    </li>
+  </ul>
 
 </div>
 
 <script type="text/javascript" src="../js/vue.js"></script>
 <script type="text/javascript">
+  new Vue({
+    el : '#demo',
+    data : {
+      persons: [ // vue监视的是persons本身
+        {name: 'Tom', age: 15},
+        {name: 'Jack', age: 13},
+        {name: 'Bob', age: 14},
+        {name: 'Rose', age: 18},
+        {name: 'Jerry', age: 17}
+      ]
+    },
 
+    methods: {
+      deleteP (index) {
+        // splice(): 不再是数组的原生方法, 而是变异(重写)方法
+          // 1. 调用原生的方法进行数据处理
+          // 2. 更新界面
+        this.persons.splice(index, 1)
+      },
+
+      updateP (index, newP) {
+        // this.persons[index] = newP // vue不知道数组内部元素发生了改变, 不会更新界面
+        this.persons.splice(index, 1, newP)
+        // this.persons = []
+      }
+    }
+  })
 </script>
 </body>
 </html>
