--- a/08_表单输入绑定/test.html
+++ b/08_表单输入绑定/test.html
@@ -52,7 +52,7 @@
     el : '#demo',
     data : {
       user: {
-        username: '',
+        username: '123',
         pwd: '',
         sex: '女',
         likes: ['足球'],
