--- a/10_过渡&动画/test.html
+++ b/10_过渡&动画/test.html
@@ -3,6 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <title>10_过渡&动画1</title>
+  <style>
+    /*指定过渡*/
+    .fade-enter-active, .fade-leave-active {
+      transition: opacity 3s;
+    }
+
+    /*隐藏时的样式*/
+    .fade-enter, .fade-leave-to {
+      opacity: 0;
+    }
+
+    /*显示的过渡*/
+    .xxx-enter-active {
+      transition: all 1s
+    }
+    /*离开的过渡*/
+    .xxx-leave-active {
+      transition: all 3s
+    }
+    /*隐藏时的样式*/
+    .xxx-enter, .xxx-leave-to {
+      opacity: 0;
+      transform: translateX(30px)
+    }
+
+  </style>
 </head>
 <body>
 <!--
@@ -20,10 +46,42 @@
   xxx-enter: 指定隐藏时的样式
 -->
 
+<div id="demo">
+  <button @click="show = !show">
+    Toggle
+  </button>
+  <transition name="fade">
+    <p v-show="show">hello</p>
+  </transition>
+</div>
+
+
+<div id="demo2">
+  <button @click="show = !show">
+    Toggle
+  </button>
+  <transition name="xxx">
+    <p v-show="show">hello</p>
+  </transition>
+
+</div>
+
 
 <script type="text/javascript" src="../js/vue.js"></script>
 <script type="text/javascript">
+  new Vue({
+    el: '#demo',
+    data: {
+      show: true
+    }
+  })
 
+  new Vue({
+    el: '#demo2',
+    data: {
+      show: true
+    }
+  })
 </script>
 </body>
 </html>
